1998-06-22  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* doc/guides/smtp-policy:
	    Updated the contents to match system a bit more

1998-06-16  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* Makefile.in:
	    PATCHLEVEL 50-s6

	* configure.in, nearly all  Makefile.in  files:
	    Configure option:  --with-generic-include="-I/..."
	    which is added into ALL compilation statements

1998-06-15  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/policytest.c:
	    Moved "P_A_FullTrustNet" attribute recognition up a bit
	    so that "P_A_RelayCustNet" does not blank full_trust mode!

	* utils/policy-builder.sh.in:
	    Added another retrievable spam domain list

	* proto/cf/aliases.cf:
	    A fragment of script (in comment) which is specific for
	    listserv.funet.fi  system.

	* scheduler/msgerror.c:
	    When reporting "Multiple-fault:" type error, tell also
	    which template file is not openable, and ask the recipient
	    to report the case to the postmaster...

	* router/functions.c:
	    - rd_doit() -- don't rename "core*" file into normal
			   spooled file name
	    - run_listexpand():  Did complain when it got 5 arguments
				 and refused to do the work :-(

1998-06-14  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/cf/aliases.cf, proto/cf/fqdnaliases.cf:
	    Match new listexpand parameters.

	* router/functions.c:
	    Added two new parameters to function  listexpand
	    to match underlying   rrouter  script function.

	* libsh/regex.h, libsh/regex.c:
	    Matched against GLIBC  <regex.h>  type defines.

	* transports/smtp/smtp.c:
	    A screwup in DBAT dot-processing algorithm.
	    Basically BDAT phase did line-start dot-duplication,
	    which is all right for DATA phase, but a no-no for
	    the BDAT :-(

1998-06-13  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/cf/aliases.cf:
	    Removing "sender" parameters from alias processing
	    cases.  Copying them from other codes was a mistake
	    with subtle results.
	
	* proto/newaliases.in: